--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,23 @@ nav ul {
 
 nav ul li {
 	float: left;
+	padding: 0 5px;
+}
+
+header {
+	height: 100px;
+	outline: 1px black solid;
 }
 
 main {
+	background-color: rgba(200,200,200,0.7);
+	box-shadow: 5px 5px 5px gray;
 	clear: both;
+	margin: 0 auto;
+	width: 90%;
+}
+
+footer {
+	height: 100px;
+	outline: 1px black solid;
 }
