--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,15 @@
 body {
-	background-color: beige;
+	background-color: rgb(238,238,238);
 }
 
+nav {
+	height: 25px;
+}
 nav ul {
+	display: inline-block;
+	height: 20px;
+	margin: 0;
+	padding: 0;
 	list-style-type: none;
 }
 
@@ -11,24 +18,41 @@ nav ul li {
 	padding: 0 5px;
 }
 
+nav ul li a {
+	text-decoration: none;
+}
+
 header {
-	height: 100px;
-	outline: 1px black solid;
+	height: 75px;
+	/*outline: 1px black solid;*/
+	text-align: center;
 }
 
 header h1 {
+	font-size: 3em;
 	margin: 0;
+}
+
+header h1 span {
+	color: rgb(75, 190, 173);	
+}
+
+header h1 {
+	color: rgb(40, 52, 103);
 }
 
 main {
 	background-color: rgba(200,200,200,0.7);
 	box-shadow: 5px 5px 5px gray;
 	clear: both;
-	margin: 0 auto;
+	margin: 5px auto;
+	padding: 5px;
+
 	width: 90%;
 }
 
 footer {
 	height: 100px;
-	outline: 1px black solid;
+	text-align: center;
+	margin-top: 20px;
 }
