--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,5 @@
 ---
-title: Welcome to Middleman
+title: Welcome to the Block
 ---
 
-<div class="welcome">
-  <div class="logo">
-    <%= image_tag "middleman-logo.svg" %>
-  </div>
-  <h1>Middleman is Running</h1>
-  <p class="doc">
-    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<h1>Welcome to the <strong>Block.</strong></h1>
