--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,24 @@
   </head>
 
   <body class="<%= page_classes %>">
+  <header>
+    <h1><span>Nicholas</span> Block</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="experiences.html">Experiences</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
     <%= yield %>
   </body>
+  <footer>
+    <a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+    <a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+  </footer>
 </html>
