--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -2,66 +2,78 @@
 @import "normalize";
 
 body {
-  background: #ECC561;
+  background-color: rgb(238,238,238);
+}
+
+nav {
+  height: 25px;
+}
+nav ul {
+  display: inline-block;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+nav ul li {
+  float: left;
+  padding: 0 5px;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: red;
+}
+
+header {
+  height: 75px;
+  /*outline: 1px black solid;*/
   text-align: center;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1em;
 }
 
-.logo img {
-  height: 18.75em;
-  margin-top: 6em;
-}
-
-h1 {
-  color: rgba(0,0,0,0.5);
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.8em;
-  font-weight: 400;
+header h1 {
+  font-size: 3em;
   margin: 0;
 }
 
-.doc {
-  margin: 3em 0;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-
-  a {
-    border: 1px solid white;
-    border-radius: 3px;
-    padding: 0.75em 0.7em;
-    color: white;
-    text-decoration: none;
-    transition: color 0.1s linear;
-    &:hover {
-      background: rgba(0,0,0,0.2);
-      color: white;
-      transition: all 0.15s linear;
-    }
-  }
+header h1 span {
+  color: rgb(75, 190, 173); 
 }
 
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s;
+header h1 {
+  color: rgb(40, 52, 103);
 }
 
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  50% {
-   -webkit-transform: scale(0);
-   opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.03);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
-  }
+main {
+  background-color: rgba(200,200,200,0.7);
+  box-shadow: 0px 0px 10px gray;
+  clear: both;
+  margin: 5px auto;
+  padding: 5px;
+
+  width: 80%;
+}
+
+main.contact p {
+  display: inline-block;
+}
+
+main.contact p strong {
+  margin-right: 20px;
+  width: 110px;
+}
+
+main.experiences div h3 {
+  /*display: inline-block;*/
+}
+
+
+footer {
+  height: 100px;
+  text-align: center;
+  margin-top: 20px;
 }
