Turn pages into erb files and move into source directory

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -28,7 +28,9 @@
       </ul>
     </nav>
   </header>
+  <main>
     <%= yield %>
+    </main>
   </body>
   <footer>
     <a href="https://www.linkedin.com/in/nicholasblock78
