--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -4,6 +4,7 @@
 	<li>React</li>
 	<li>React Native</li>
 	<li>Google Maps API</li>
+	<li>MiddleMan</li>
 </ul>
 <ul>
 	<p>Current Skills and Technologies</p>
@@ -11,14 +12,27 @@
 	<li>Ruby on Rails</li>
 	<li>HTML5</li>
 	<li>CSS3</li>
+	<li>Sass</li>
 	<li>jQuery and AJAX</li>
 	<li>Agile Workflow</li>
 	<li>SQL</li>
+	<li>Sinatra</li>
 	<li>Active Record</li>
+	<li>Adobe Photoshop</li>
+	<li>Adobe Illustrator</li>
+	<li>iMovie</li>
 </ul>
 	<ul>
 	<p>Dabbled In</p>
 	<li>Angular</li>
 	<li>Ionic</li>
+	
+</ul>
+<ul>
+	<p>On the Docket</p>
+	<li>Gulp</li>
+	<li>Coffescript</li>
+	<li>less</li>
+	<li>Haml</li>
 	
 </ul>
