Refactor header CSS

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,7 @@
 ---
 title: Welcome to the Block
 ---
-
-<h1>Welcome to the <strong>Block.</strong></h1>
+<div>
+	<h1>Welcome <em>to the</em><br />
+	<strong>Block.</strong></h1>
+</div>
