--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,52 +1,13 @@
 @charset "utf-8";
 @import "normalize";
+@import "colors";
+@import "header";
 
 body {
   background-color: rgb(238,238,238);
 }
 
-nav {
-  height: 25px;
-}
-nav ul {
-  display: inline-block;
-  height: 20px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
 
-nav ul li {
-  float: left;
-  padding: 0 5px;
-}
-
-nav ul li a {
-  text-decoration: none;
-}
-
-nav a:hover {
-  color: red;
-}
-
-header {
-  height: 75px;
-  /*outline: 1px black solid;*/
-  text-align: center;
-}
-
-header h1 {
-  font-size: 3em;
-  margin: 0;
-}
-
-header h1 span {
-  color: rgb(75, 190, 173); 
-}
-
-header h1 {
-  color: rgb(40, 52, 103);
-}
 
 main {
   background-color: rgba(200,200,200,0.7);
@@ -78,7 +39,7 @@ footer {
   margin-top: 20px;
 
   span {
-    background-color: orange;
+    background-color: $middleman;
     height: 40px;
 
     img {
