progress on displaying experiences correctly

--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -36,3 +36,12 @@
 	<li>Haml</li>
 	
 </ul>
+
+<ul>
+	<p>My Toolbelt</p>
+	<li>Imagemagick</li>
+	<li>Sass</li>
+	<li>Adobe Suite</li>
+	<li>myezprompt.net</li>
+	
+</ul>
