--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -1,30 +1,67 @@
-		<h2>Experiences</h2>
-		<div>
-			<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
-			<h3>Dev Bootcamp</h3>
+<div id="experiences">
+<h2>Experiences</h2>
+	<section>
+		<div class="left">
+			<div class="logo">
+				<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
+			</div>
+			<div class="thumbnails">
+				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+
+			</div>
+		</div>
+		<div class="info">
 			<p>19-week intensive coding bootcamp for full stack web development.</p>
 			<p>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</p>
 		</div>
-		<div>
-			<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
-			<h3>The Chopping Block</h3>
+	</section>
+	<section>
+		<div class="left">
+			<div class="logo">
+				<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
+			</div>
+			<div class="thumbnails">
+				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+			</div>
+		</div>
+		<div class="info">
 			<p>Prepared appetizers for guests and served alcohol to patrons during classes and parties</p>
 			<p>Instructed patrons on cooking skills during parties while leading a recipe(s) station</p>
 			<p>Assissted leading cooking bootcamps for kids and adults alike</p>
 		</div>
-			<div>
-			<img src="images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
-			<h3>The Creative Circus</h3>
+	</section>
+	<section>
+		<div class="left">
+			<div class="logo">
+				<img src="images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
+			</div>
+			<div class="thumbnails">
+				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+			</div>
+		</div>
+		<div class="info">
 			<p>Eight week intensive creative advertising bootcamp in Atlanta, GA.</p>
 		</div>
-			<div>
-			<img src="images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
-			<h3>Outdoor Adventure Camp</h3>
+	</section>
+	<section>
+		<div class="left">
+			<div class="logo">
+				<img src="images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
+			</div>
+			<div class="thumbnails">
+				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+			</div>
+		</div>
+		<div class="info">
 			<p>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</p>
 			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
 			<p>Led many outdoor recreational activities, such as hiking and kayaking</p>
 		</div>
-		<h2>Education</h2>
+	</section>
+</div>
+	
+<div id="education">	
+	<h2>Education</h2>
 		<div>
 			<img src="images/iowa.gif" alt="Iowa Logo" height="40px" />
 			<h3>University of Iowa</h3>
@@ -35,3 +72,4 @@
 			<h3>Illinois Wesleyan University</h3>
 			<p>Attended freshman year</p>
 		</div>
+</div>
