Experiences page looks much better. Autoprefixer added to config file.

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -3,7 +3,7 @@
 	<section>
 		<div class="left">
 			<div class="logo">
-				<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
+				<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="60px"/>
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
@@ -11,65 +11,73 @@
 			</div>
 		</div>
 		<div class="info">
-			<p>19-week intensive coding bootcamp for full stack web development.</p>
-			<p>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</p>
+			<ul>
+				<li>19-week intensive coding bootcamp for full stack web development</li>
+				<li>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</li>
+			</ul>
 		</div>
 	</section>
 	<section>
 		<div class="left">
 			<div class="logo">
-				<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
+				<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
 			</div>
 		</div>
 		<div class="info">
-			<p>Prepared appetizers for guests and served alcohol to patrons during classes and parties</p>
-			<p>Instructed patrons on cooking skills during parties while leading a recipe(s) station</p>
-			<p>Assissted leading cooking bootcamps for kids and adults alike</p>
+			<ul>
+				<li>Prepared appetizers for guests and served alcohol to patrons during classes and parties</li>
+				<li>Instructed patrons on cooking skills during parties while leading a recipe(s) station</li>
+				<li>Assissted leading cooking bootcamps for kids and adults alike</li>
+			</ul>
 		</div>
 	</section>
 	<section>
 		<div class="left">
 			<div class="logo">
-				<img src="images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
+				<img src="images/creativecircus.png" alt="Creative Circus Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
 			</div>
 		</div>
 		<div class="info">
-			<p>Eight week intensive creative advertising bootcamp in Atlanta, GA.</p>
+			<ul>
+				<li>Eight week intensive creative advertising bootcamp in Atlanta, GA.</li>
+			</ul>
 		</div>
 	</section>
 	<section>
 		<div class="left">
 			<div class="logo">
-				<img src="images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
+				<img src="images/pdhp-logo.png" alt="PDHP Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
 			</div>
 		</div>
 		<div class="info">
-			<p>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</p>
-			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
-			<p>Led many outdoor recreational activities, such as hiking and kayaking</p>
+		<ul>
+			<li>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</li>
+			<li>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</li>
+			<li>Led many outdoor recreational activities, such as hiking and kayaking</li>
+		</ul>
 		</div>
 	</section>
 </div>
 	
 <div id="education">	
 	<h2>Education</h2>
-		<div>
+		<section>
 			<img src="images/iowa.gif" alt="Iowa Logo" height="40px" />
 			<h3>University of Iowa</h3>
 			<p>BA Health and Human Physiology, 2015</p>
-		</div>
-		<div>
+		</section>
+		<section>
 			<img src="images/iwu-logo.png" alt="IWU Logo" height="40px" />
 			<h3>Illinois Wesleyan University</h3>
 			<p>Attended freshman year</p>
-		</div>
+		</section>
 </div>
