--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,4 @@
 ---
 title: Welcome to the Block
 ---
-<div>
-	<h1>Welcome <em>to the</em><br />
-	<strong>Block.</strong></h1>
-</div>
+<%= image_tag 'welcome-block.svg', class: 'welcome', alt: "Welcome to the Block" %>
