--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,14 +8,14 @@ body {
 }
 
 
-
 main {
   background-color: rgba(200,200,200,0.7);
   box-shadow: 0px 0px 10px gray;
   clear: both;
   margin: 5px auto;
+  text-align: center;
   padding: 5px;
-  height: 750px;
+  // height: 750px;
   width: 80%;
 }
 
@@ -28,6 +28,10 @@ main.contact p strong {
   width: 110px;
 }
 
+.welcome {
+  margin: 0 auto;
+  width: 60%;
+}
 
 /********* EXPERIENCES & EDUCATION *********/
 
@@ -35,42 +39,83 @@ div#experiences {
   background-color: orange;
   display: flex;
   flex-direction: column;
-  height: 650px;
+  
   margin: 0 auto;
   padding: 2%;
   width: 80%;
 
   section {
+    // outline: 1px solid black;
     display: flex;
+    height: 200px;
+    margin: 10px 0;
     width: 100%;
 
     div.left {
+      height: 200px;
       flex: 1;
+      // outline: 1px solid black;
+      margin-top: 20px;
 
       div.logo {
+        height: 150px;
+        text-align: center;
+        // outline: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
+        img {
+
+        }
       }
 
       div.thumbnails {
         display: inline-block;
+        height: 50px;
+        // outline: 1px solid black;
+        width: 100%;
+        text-align: center;
+
+        img {
+
+        }
       }
     }
 
     div.info {
       flex: 2;
+      // outline: 1px solid black;
+      text-align: left;
+      display: flex;
+      align-items: center;
+
+      ul {
+        margin: 0;
+        padding-left: 40px;
+
+        li {
+          list-style-type: square;
+        }
+      }
     }
 
   }
 }
 
 div#education {
-   background-color: goldenrod;
-  display: flex;
-  flex-direction: column;
-  height: 300px;
-  margin: 0 auto;
-  padding: 2%;
-  width: 80%;
+ background-color: goldenrod;
+ display: flex;
+ flex-direction: column;
+ height: 300px;
+ margin: 0 auto;
+ padding: 2%;
+ width: 80%;
+
+ section {
+
+ }
+
 }
 
 
@@ -79,6 +124,7 @@ div#education {
 
 
 footer {
+  clear: both;
   height: 100px;
   text-align: center;
   margin-top: 20px;
