Add in web logo thumbnail with links

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -6,8 +6,10 @@
 				<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="60px"/>
 			</div>
 			<div class="thumbnails">
-				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
-
+				<%= image_tag 'calendar-thumbnail.png' %>
+				<% link_to 'http://devbootcamp.com', target: '_blank' do %>
+					<%= image_tag 'web-logo.png' %>
+				<% end %>
 			</div>
 		</div>
 		<div class="info">
@@ -23,7 +25,10 @@
 				<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
-				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+				<%= image_tag 'calendar-thumbnail.png' %>
+				<% link_to 'http:/http://www.thechoppingblock.com', target: '_blank' do %>
+					<%= image_tag 'web-logo.png' %>
+				<% end %>
 			</div>
 		</div>
 		<div class="info">
@@ -40,7 +45,10 @@
 				<img src="images/creativecircus.png" alt="Creative Circus Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
-				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+				<%= image_tag 'calendar-thumbnail.png' %>
+				<% link_to 'http://http://summeratthecircus.com/', target: '_blank' do %>
+					<%= image_tag 'web-logo.png' %>
+				<% end %>
 			</div>
 		</div>
 		<div class="info">
@@ -55,7 +63,10 @@
 				<img src="images/pdhp-logo.png" alt="PDHP Logo" height="125px" />
 			</div>
 			<div class="thumbnails">
-				<%= image_tag 'calendar-thumbnail.png', width: '35px' %>
+				<%= image_tag 'calendar-thumbnail.png' %>
+				<% link_to 'http://http://www.pdhp.org/camps/', target: '_blank' do %>
+					<%= image_tag 'web-logo.png' %>
+				<% end %>
 			</div>
 		</div>
 		<div class="info">
