--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -32,6 +32,19 @@ main.contact p strong {
   margin: 0 auto;
   width: 60%;
 }
+/********* SKILLS *************/
+main  {
+
+  div#skills {
+  text-align: center;
+
+  ul {
+    text-align: center;
+  } 
+} 
+}
+
+
 
 /********* EXPERIENCES & EDUCATION *********/
 
