--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,8 @@
   <title><%= current_page.data.title || "Nick Block" %></title>
 
   <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  
   <%= stylesheet_link_tag :site %>
   <%= javascript_include_tag :all %>
 </head>
