--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -16,7 +16,7 @@ main {
   text-align: center;
   padding: 5px;
   // height: 750px;
-  width: 80%;
+  width: 70%;
 }
 
 main.contact p {
@@ -36,14 +36,15 @@ main.contact p strong {
 main  {
 
   div#skills {
-  text-align: center;
+  text-align: left;
 
   ul {
-    text-align: center;
+    
   } 
 } 
 }
 
+@import "about";
 
 
 /********* EXPERIENCES & EDUCATION *********/
@@ -124,7 +125,7 @@ div#education {
  background-color: goldenrod;
  display: flex;
  flex-direction: column;
- height: 300px;
+ height: 500px;
  margin: 0 auto;
  padding: 2%;
  width: 80%;
