--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -1,14 +1,7 @@
 <div id="skills">
-	<h2>Skills</h2>
+<h2>Skills</h2>
 	<ul>
-		<p>Currently studying</p>
-		<li>React</li>
-		<li>React Native</li>
-		<li>Google Maps API</li>
-		<li>MiddleMan</li>
-	</ul>
-	<ul>
-		<p>Current Skills and Technologies</p>
+		<h3>Current Skills &amp; Technologies</h3>
 		<li>Ruby</li>
 		<li>Ruby on Rails</li>
 		<li>HTML5</li>
@@ -24,26 +17,22 @@
 		<li>iMovie</li>
 	</ul>
 	<ul>
-		<p>Dabbled In</p>
-		<li>Angular</li>
-		<li>Ionic</li>
-		
+		<h3>Currently studying</h3>
+		<li>React</li>
+		<li>React Native</li>
+		<li>Google Maps API</li>
+		<li>MiddleMan</li>
 	</ul>
 	<ul>
-		<p>On the Docket</p>
+		<h3>Dabbled In</h3>
+		<li>Angular</li>
+		<li>Ionic</li>
+	</ul>
+	<ul>
+		<h3>On the Docket</h3>
 		<li>Gulp</li>
 		<li>Coffescript</li>
 		<li>less</li>
 		<li>Haml</li>
-		
-	</ul>
-
-	<ul>
-		<p>My Toolbelt</p>
-		<li>Imagemagick</li>
-		<li>Sass</li>
-		<li>Adobe Suite</li>
-		<li>myezprompt.net</li>
-		
 	</ul>
 </div>
