Add work styling into its own scss partial

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -1,34 +1,46 @@
 <h2>My Work</h2>
-<div>
-	<h3>Team Projects</h3>
-	<ul>
-		<li>
-			<img src="images/recipe.png" alt="Recip-E Logo" height="100px"/>
-			<p><strong>Recip-E</strong></p>
-			<p>Dev Bootcamp's Final Project</p>
-			<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
-			<ul>
-				<li>Goal to create a cross-platform mobile first app in a week with a team unfamiliar with Angular and Ionic</li>
-				<li>Operated in both front end and back end capacity. Coordinated categories for organizing ingredients</li>
-				<li>Created keynote presentation for the pitch at graduation</li>
-			</ul>
-		</li>
-		<li>
-			<p><strong>Pharoah</strong></p>
-			<p>The Creative Circus's Final Project</p>
-		</li>
-	</ul>
-</div>
-<div>
-	<h3>Personal Projects</h3>
-	<ul>
-		<li>
-			<p><strong><a href="http://www.eatforus.com">Eat for Us</a></strong></p>
-			<p>A sustainable food blog</p>
-		</li>
-		<li>
-			<p><strong>Paws On Foot</strong></p>
-			<p>A business I wanted to start back in college</p>
-		</li>
-	</ul>
+<div id="work">
+	<div id="team">
+
+		<h3><span>Team</span> Projects</h3>
+		<section>
+			<div class="lefty">
+				<img src="images/recipe.png" alt="Recip-E Logo"/>
+			</div>
+			<div class="righty">
+				<h4><strong>Recip-E</strong></h4>
+				<p>Dev Bootcamp's Final Project</p>
+				<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
+				<ul>
+					<li>Goal to create a cross-platform mobile first app in a week with a team unfamiliar with Angular and Ionic</li>
+					<li>Operated in both front end and back end capacity. Coordinated categories for organizing ingredients</li>
+					<li>Created keynote presentation for the pitch at graduation</li>
+				</ul>
+			</div>
+		</section>
+		<section>
+			<div class="lefty">
+
+			</div>
+			<div class="righty">
+				<h4><strong>Pharoah</strong></h4>
+				<p>The Creative Circus's Final Project</p>
+			</div>
+		</section>
+	</div>
+
+	<div id='personal'>
+		<h3>Personal Projects</h3>
+		<p><em>More coming here soon!</em></p>
+		<ul>
+			<li>
+				<p><strong><a href="http://www.eatforus.com">Eat for Us</a></strong></p>
+				<p>A sustainable food blog</p>
+			</li>
+			<li>
+				<p><strong>Paws On Foot</strong></p>
+				<p>A business I wanted to start back in college</p>
+			</li>
+		</ul>
+	</div>
 </div>
