--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,11 +1,15 @@
 <footer>
 	<div id="footer-icons">
 		<a href="https://www.linkedin.com/in/nicholasblock78
-		"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+		"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" /></a>
 	</div>
 
 	<div id="middleman-credit">
-		<p>Built using MiddleMan <span><%= image_tag 'middleman-logo.svg' %></span></p>
+		<div>
+			<p>Built using MiddleMan</p>
+			<%= image_tag 'middleman-logo.svg' %>
+			<div id="orange"></div>
+		</div>
 	</div>
 </footer>
