Fix creative circus link error and update its content

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -48,7 +48,7 @@
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png' %>
-				<% link_to 'http://http://summeratthecircus.com/', target: '_blank' do %>
+				<% link_to 'http://summeratthecircus.com/', target: '_blank' do %>
 					<%= image_tag 'web-logo.png' %>
 				<% end %>
 			</div>
@@ -56,6 +56,8 @@
 		<div class="info">
 			<ul>
 				<li>Eight week intensive creative advertising bootcamp in Atlanta, GA.</li>
+				<li>Creative Teams. Art Direction. Adobe Suite. Creative Strategy.</li>
+				<li>Type. Photo. Video. Board Game Challenge. Portfolio Week.</li>
 			</ul>
 		</div>
 	</section>
