Fix the rest of the link errors in experiences

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -28,7 +28,7 @@
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png' %>
-				<% link_to 'http:/http://www.thechoppingblock.com', target: '_blank' do %>
+				<% link_to 'http://www.thechoppingblock.com', target: '_blank' do %>
 					<%= image_tag 'web-logo.png' %>
 				<% end %>
 			</div>
@@ -68,7 +68,7 @@
 			</div>
 			<div class="thumbnails">
 				<%= image_tag 'calendar-thumbnail.png' %>
-				<% link_to 'http://http://www.pdhp.org/camps/', target: '_blank' do %>
+				<% link_to 'http://www.pdhp.org/camps/', target: '_blank' do %>
 					<%= image_tag 'web-logo.png' %>
 				<% end %>
 			</div>
