Add Pharaoh project image

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -20,7 +20,7 @@
 		</section>
 		<section>
 			<div class="lefty">
-
+			<%= image_tag 'pharaoh.jpg' %>
 			</div>
 			<div class="righty">
 				<h4><strong>Pharoah</strong></h4>
@@ -34,7 +34,7 @@
 		<p><em>More coming here soon!</em></p>
 		<ul>
 			<li>
-				<p><strong><a href="http://www.eatforus.com">Eat for Us</a></strong></p>
+				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
 				<p>A sustainable food blog</p>
 			</li>
 			<li>
