Update skill lists and site display name in layout

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -101,7 +101,7 @@
 		</section>
 </div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	console.log('hello');
 $(document).ready( function () {
 	$('#dbc').on('click', function() {
@@ -112,4 +112,4 @@ $(document).ready( function () {
 	})
 });
 
-</script>
+</script> -->
