--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -11,6 +11,7 @@
 		<li>Agile Workflow</li>
 		<li>SQL</li>
 		<li>Sinatra</li>
+		<li>Heroku</li>
 		<li>Active Record</li>
 		<li>Adobe Photoshop</li>
 		<li>Adobe Illustrator</li>
@@ -35,5 +36,6 @@
 		<li>less</li>
 		<li>Haml</li>
 		<li>node.js</li>
+		<li>Social Media APIs</li>
 	</ul>
 </div>
