--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -21,6 +21,7 @@
 		<h3>Currently studying</h3>
 		<li>React</li>
 		<li>React Native</li>
+		<li>MERN Stack</li>
 		<li>Google Maps API</li>
 		<li>MiddleMan</li>
 	</ul>
@@ -31,11 +32,12 @@
 	</ul>
 	<ul>
 		<h3>On the Docket</h3>
+		<li>node.js</li>
 		<li>Gulp</li>
 		<li>Coffescript</li>
+		<li>Modernizr</li>
 		<li>less</li>
 		<li>Haml</li>
-		<li>node.js</li>
 		<li>Social Media APIs</li>
 	</ul>
 </div>
