Add favicon to root directory and attempt to link in head of layout. Not functioning

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
 
   <!-- Use title if it's in the page YAML frontmatter -->
   <title><%= current_page.data.title || "Welcome to the Block." %></title>
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
