--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -8,6 +8,7 @@
       <li><a href="skills.html">Skills</a></li>
       <li><a href="experiences.html">Experiences</a></li>
       <li><a href="work.html">Work</a></li>
+      <li><a href="QA.html">Q&amp;A</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
