Update Q&A page and add Huddle Up to experiences page

--- a/source/QA.html.erb
+++ b/source/QA.html.erb
@@ -1,1 +1,21 @@
 <h2>Get to know me better!</h2>
+<div id='faq'>
+	<ul>
+		<li>
+			<h3>Who are your biggest role models?</h3>
+			<p>My two role models are Steve Jobs and Robin Williams. These two men are a few of the most influential in the history of our country, even the world. I’ve spent my life trying to find the balance between their eccentric personalities – a perfect mix between Steve’s “go get ‘em” leadership with Robin’s humor and compassion.</p>
+		</li>
+		<li>
+			<h3>What are some of your favorite quotes?</h3>
+			<p>"The strongest oak of the forest is not the one that is protected from the storm and hidden from the sun. It’s the one that stands in the open where it is compelled to struggle for its existence against the wind and rains and the scorching sun." - Napoleon Hill</p>
+		</li>
+		<li>
+			<h3>What have you been watching on T.V.?</h3>
+			<p>Sunday nights are for football, Walking Dead, and WestWorld.</p>
+		</li>
+		<li>
+			<h3>What are you most proud of?</h3>
+			<p>Losing over 120 pounds and keeping it off! What a difference it's made in my life.</p>
+		</li>
+	</ul>
+</div>
