--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -36,6 +36,12 @@
 			<li>
 				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
 				<p>A sustainable food blog</p>
+				<p>Built on Rails</p>
+			</li>
+			<li>
+				<p><strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong></p>
+				<p>A web app to find sports games around you to play in</p>
+				<p>Built on Rails</p>
 			</li>
 			<li>
 				<p><strong>Paws On Foot</strong></p>
