--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -55,7 +55,7 @@
 		</div>
 		<div class="info">
 			<ul>
-				<li>Eight week intensive creative advertising bootcamp in Atlanta, GA.</li>
+				<li>Eight week intensive creative advertising bootcamp in Atlanta, GA at one of the best portfolio schools in the country.</li>
 				<li>Creative Teams. Art Direction. Adobe Suite. Creative Strategy.</li>
 				<li>Type. Photo. Video. Board Game Challenge. Portfolio Week.</li>
 			</ul>
