--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -14,6 +14,7 @@ div#work {
 		}
 		section {
 			display: flex;
+			margin-top: 20px;
 
 			.lefty {
 				display: flex;
@@ -28,6 +29,7 @@ div#work {
 			}
 			.righty {
 				flex: 2;
+				margin-left: 20px;
 
 				h4 {
 					font-size: 1.5em;
