--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -27,6 +27,15 @@
 				<p>The Creative Circus's Final Project</p>
 			</div>
 		</section>
+		<section>
+			<div class="lefty">
+			<iframe width="360" height="200" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="righty">
+				<h4><strong>Video Week @ The Circus</strong></h4>
+				<p>Our prompt was a 3 min horror video that including a specific name and a cane prop</p>
+			</div>
+		</section>
 	</div>
 
 	<div id='personal'>
