--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -41,6 +41,7 @@
 	<div id='personal'>
 		<h3>Personal Projects</h3>
 		<p><em>More coming here soon!</em></p>
+		<p>Currently working on upping my skill level with Rails</p>
 		<ul>
 			<li>
 				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
