Add in new personal project

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -41,7 +41,8 @@
 	<div id='personal'>
 		<h3>Personal Projects</h3>
 		<p><em>More coming here soon!</em></p>
-		<p>Currently working on upping my skill level with Rails</p>
+		<p>Currently working on upping my skill level with Rails
+		</p>
 		<ul>
 			<li>
 				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
@@ -52,6 +53,10 @@
 				<p><strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong></p>
 				<p>A web app to find sports games around you to play in</p>
 				<p>Built on Rails</p>
+			</li>
+			<li>
+				<p><strong>Recipe Overflow</strong></p>
+				<p>Another Rails application. Practice makes perfect!</p>
 			</li>
 			<li>
 				<p><strong>Paws On Foot</strong></p>
