Add in Friendsgiving

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -20,7 +20,7 @@
 		</section>
 		<section>
 			<div class="lefty">
-			<%= image_tag 'pharaoh.jpg' %>
+				<%= image_tag 'pharaoh.jpg' %>
 			</div>
 			<div class="righty">
 				<h4><strong>Pharoah</strong></h4>
@@ -29,7 +29,7 @@
 		</section>
 		<section>
 			<div class="lefty">
-			<iframe width="360" height="200" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
+				<iframe width="360" height="200" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="righty">
 				<h4><strong>Video Week @ The Circus</strong></h4>
@@ -45,13 +45,17 @@
 		</p>
 		<ul>
 			<li>
-				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
-				<p>A sustainable food blog</p>
-				<p>Built on Rails</p>
+				<p><strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong></p>
+				<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
 			</li>
 			<li>
 				<p><strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong></p>
 				<p>A web app to find sports games around you to play in</p>
+				<p>Built on Rails</p>
+			</li>
+			<li>
+				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
+				<p>A sustainable food blog</p>
 				<p>Built on Rails</p>
 			</li>
 			<li>
