Add in layout change for Work page

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -1,6 +1,10 @@
 <h2>My Work</h2>
+<div id="work-buttons">
+	<button class="personal">Personal</button>
+	<button class="team">Team</button>
+</div>
 <div id="work">
-	<div id="team">
+	<div id="team" style="display:none;">
 
 		<h3><span>Team</span> Projects</h3>
 		<section>
