--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -1,3 +1,22 @@
+div#work-buttons {
+	display: flex;
+	justify-content: center;
+
+	button {
+		background-color: rgba(138, 242, 33,0.6);
+		border: 3px solid goldenrod;
+		border-radius: 25px;
+		box-shadow: 3px 3px 5px gray;
+		margin: 1.5% 2%;
+		height: 40px;
+		width: 200px;
+	}
+
+	button:hover {
+		background-color: goldenrod;
+	}
+}
+
 div#work {
 	text-align: left;
 	width: 80%;
