General website updates

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -1,3 +1,7 @@
+<div class="buttons">
+	<button class="experiences">Experiences</button>
+	<button class="education">Education</button>
+</div>
 <div id="experiences">
 <h2>Experiences</h2>
 	<section>
@@ -91,6 +95,7 @@
 		<p>Check out some of the older places I've worked at too!</p>
 		<ul>
 			<li>Camp Counselor &amp; Lifeguard at my local JCYS</li>
+			<li>Operated a Bungee Jump amusement ride in Bloomington's Eastland Mall</li>
 			<li>Intramural referee at The University of Iowa</li>
 			<li>Window washing</li>
 			<li>Delivery Driver for a few different places</li>
@@ -99,7 +104,7 @@
 	</section>
 </div>
 	
-<div id="education">	
+<div id="education" style="display: none;">	
 	<h2>Education</h2>
 		<section>
 			<img src="images/iowa.gif" alt="Iowa Logo" height="60px" />
