--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -1,43 +1,51 @@
 <h2>Skills</h2>
 <div id="skills">
-	<ul>
+	<div>
 		<h3>Current Skills &amp; Technologies</h3>
-		<li>Ruby</li>
-		<li>Ruby on Rails</li>
-		<li>HTML5</li>
-		<li>CSS3</li>
-		<li>Sass</li>
-		<li>jQuery and AJAX</li>
-		<li>Agile Workflow</li>
-		<li>SQL</li>
-		<li>Sinatra</li>
-		<li>Heroku</li>
-		<li>Active Record</li>
-		<li>Adobe Photoshop</li>
-		<li>Adobe Illustrator</li>
-		<li>iMovie</li>
-	</ul>
-	<ul>
+		<ul>
+			<li>Ruby</li>
+			<li>Ruby on Rails</li>
+			<li>HTML5</li>
+			<li>CSS3</li>
+			<li>Sass</li>
+			<li>jQuery and AJAX</li>
+			<li>Agile Workflow</li>
+			<li>SQL</li>
+			<li>Sinatra</li>
+			<li>Heroku</li>
+			<li>Active Record</li>
+			<li>Adobe Photoshop</li>
+			<li>Adobe Illustrator</li>
+			<li>iMovie</li>
+		</ul>
+	</div>
+	<div>
 		<h3>Currently studying</h3>
-		<li>React</li>
-		<li>React Native</li>
-		<li>MERN Stack</li>
-		<li>Google Maps API</li>
-		<li>MiddleMan</li>
-	</ul>
-	<ul>
+		<ul>
+			<li>React</li>
+			<li>React Native</li>
+			<li>MERN Stack</li>
+			<li>Google Maps API</li>
+			<li>MiddleMan</li>
+		</ul>
+	</div>
+	<div>
 		<h3>Dabbled In</h3>
-		<li>Angular</li>
-		<li>Ionic</li>
-	</ul>
-	<ul>
+		<ul>
+			<li>Angular</li>
+			<li>Ionic</li>
+		</ul>
+	</div>
+	<div>
 		<h3>On the Docket</h3>
-		<li>node.js</li>
-		<li>Gulp</li>
-		<li>Coffescript</li>
-		<li>Modernizr</li>
-		<li>less</li>
-		<li>Haml</li>
-		<li>Social Media APIs</li>
-	</ul>
+		<ul>
+			<li>node.js</li>
+			<li>Gulp</li>
+			<li>Coffescript</li>
+			<li>Modernizr</li>
+			<li>less</li>
+			<li>Haml</li>
+			<li>Social Media APIs</li>
+		</ul>
+	</div>
 </div>
