--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -1,5 +1,5 @@
 <h2>My Work</h2>
-<div id="work-buttons">
+<div class="buttons">
 	<button class="personal">Personal</button>
 	<button class="team">Team</button>
 </div>
@@ -29,11 +29,14 @@
 			<div class="righty">
 				<h4><strong>Pharoah</strong></h4>
 				<p>The Creative Circus's Final Project</p>
+				<ul>
+					<li>Team of four Copywriters and Graphic Designers designed a playable board game within a week from scratch</li>
+				</ul>
 			</div>
 		</section>
 		<section>
 			<div class="lefty">
-				<iframe width="360" height="200" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
+				<iframe width="260" height="175" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="righty">
 				<h4><strong>Video Week @ The Circus</strong></h4>
@@ -49,25 +52,25 @@
 		</p>
 		<ul>
 			<li>
-				<p><strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong></p>
+				<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
 				<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
 			</li>
 			<li>
-				<p><strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong></p>
+				<strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong>
 				<p>A web app to find sports games around you to play in</p>
 				<p>Built on Rails</p>
 			</li>
 			<li>
-				<p><strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong></p>
+				<strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong>
 				<p>A sustainable food blog</p>
 				<p>Built on Rails</p>
 			</li>
 			<li>
-				<p><strong>Recipe Overflow</strong></p>
+				<strong>Recipe Overflow</strong>
 				<p>Another Rails application. Practice makes perfect!</p>
 			</li>
 			<li>
-				<p><strong>Paws On Foot</strong></p>
+				<strong>Paws On Foot</strong>
 				<p>A business I wanted to start back in college</p>
 			</li>
 		</ul>
