--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,3 +2,8 @@
 title: Welcome to the Block
 ---
 <%= image_tag 'welcome-block.svg', class: 'welcome', alt: "Welcome to the Block" %>
+
+<br />
+<br />
+<br />
+<p>I strive to improve my site a little every day in one way or another. If you have any recommendations, please reach out to me via my Contact page! </p>
