--- a/source/stylesheets/_skills.scss
+++ b/source/stylesheets/_skills.scss
@@ -1,25 +1,31 @@
 main  {
 
-  div#skills {
-	  text-align: left;
-	  display: flex;
-	  justify-content: center;
+	div#skills {
+		text-align: left;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		justify-content: center;
 
-	  h2 {
-	  	clear: both;
-	  	font-size: 2.5em;
-	  	margin-bottom: 0;
-	  }
+		h2 {
+			clear: both;
+			font-size: 2.5em;
+			margin-bottom: 0;
+		}
 
-	  ul {
-	  	clear: both;
-	  	margin-top: 0;
-	    
-	    li {
-	    	list-style-type: square;
-	    	margin: 0;
-	    	width: 150px;
-	    }
-	  } 
-} 
+		ul {
+			clear: both;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			margin-top: 0;
+
+			li {
+				list-style-type: square;
+				margin: 0;
+				margin-left: 5px;
+				width: 150px;
+			}
+		} 
+	} 
 }
