--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -1,4 +1,4 @@
-div#work-buttons {
+div.buttons {
 	display: flex;
 	justify-content: center;
 
@@ -33,7 +33,7 @@ div#work {
 		}
 		section {
 			display: flex;
-			margin-top: 20px;
+			margin-top: 5%;
 
 			.lefty {
 				display: flex;
@@ -59,5 +59,14 @@ div#work {
 
 	#personal {
 
+		ul {
+
+			li {
+
+				p {
+					margin-left: 2%;
+				}
+			}
+		}
 	}
 }
