--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -35,6 +35,7 @@ main {
   margin: 1.5% auto;
   text-align: center;
   padding: 5px;
+  padding-bottom: 2%;
   // height: 750px;
   width: 70%;
 }
@@ -56,7 +57,7 @@ main.contact p strong {
 div#faq {
 
   ul {
-    
+
   }
 }
 
@@ -65,4 +66,5 @@ div#faq {
 @import 'skills';
 @import 'experiences';
 @import 'work';
+@import 'qa';
 @import 'footer';
