change overall padding of main

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -34,8 +34,7 @@ main {
   clear: both;
   margin: 1.5% auto;
   text-align: center;
-  padding: 5px;
-  padding-bottom: 2%;
+  padding: 2%;
   // height: 750px;
   width: 70%;
 }
