Update work page. Oorder of personal projects and link recipe overflow

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -52,21 +52,21 @@
 		</p>
 		<ul>
 			<li>
-				<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
-				<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
-			</li>
-			<li>
-				<strong><a target="_blank" href="https://huddle-up-sports.herokuapp.com/">Huddle Up Sports</a></strong>
-				<p>A web app to find sports games around you to play in</p>
-				<p>Built on Rails</p>
-			</li>
-			<li>
-				<strong><a target="_blank" href="http://www.eatforus.com">Eat for Us</a></strong>
+				<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
 				<p>A sustainable food blog</p>
 				<p>Built on Rails</p>
 			</li>
 			<li>
-				<strong>Recipe Overflow</strong>
+				<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
+				<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
+			</li>
+			<li>
+				<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
+				<p>A web app to find sports games around you to play in</p>
+				<p>Built on Rails</p>
+			</li>
+			<li>
+				<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
 				<p>Another Rails application. Practice makes perfect!</p>
 			</li>
 			<li>
